# Aincrad

./: .config  .gitignore  LICENSE  Makefile  Makefile.am  README.md  aincrad-debug  bootstrap  client.hpp  configure.ac
.objs/: aincrad.d  arguments.d  config.d  util.d
asio_patch/: fenced_block.hpp  std_fenced_block.hpp
build-scripts/: tags.mk  ycm_extra_conf_template.py  ycm_flags.mk
install/: centos6.sh  ubuntu.sh
man/: Makefile.am
res/: diagram.graffle
scripts/: all  ping  pm2  send  test
src/: Makefile.am  aincrad.cpp  aincrad.h
src/lib/: arguments.cpp  arguments.h  client.cpp  client.hpp  command.hpp  config.cpp  config.h  editor.cpp  editor.h  package.cpp  package.hpp  server.cpp  server.hpp  util.cpp  util.h  window.cpp  window.h
temp/: 0
test/: Makefile.am
